tests/snapshots/snapshots__interpreter@comp_in_annotated_row.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/comp_in_annotated_row.pr
---
20
255
=> ()
