tests/snapshots/snapshots__interpreter@constrained_mutual.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/constrained_mutual.pr
---
0
9
=> ()
