tests/snapshots/snapshots__interpreter@control_effects.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/control_effects.pr
---
3
3
13
13
hello world
0
["a", "b", "c"]
0
["a", "b", "c"]
["a", "b", "c"]
["c", "b", "a"]
(10, 6)
["x0", "x1", "y2"]
=> ()
