tests/snapshots/snapshots__interpreter@curry.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/curry.pr
---
688
=> ()
