tests/snapshots/snapshots__interpreter@curry_effect.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/curry_effect.pr
---
106
106
103
=> ()
