tests/snapshots/snapshots__interpreter@deep_effect_recursion.pr.snap
---
source: tests/snapshots.rs
expression: interp_output(path)
input_file: tests/cases/run/deep_effect_recursion.pr
---
100000
=> ()
